# django-drf

./: .gitignore
.github/workflows/: main.yml
django-learning/: <!DOCTYPE html>.html  PROGRESS_TRACKER.md  QUICK_REVIEW_GUIDE.md
django-learning/myshop/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.json  requirements.txt
django-learning/myshop/.github/workflows/: ci.yml
django-learning/myshop/authentication/: apps.py  models.py  signals.py  urls.py  views.py
django-learning/myshop/authentication/migrations/: 0001_initial.py
django-learning/myshop/logs/: .gitkeep
django-learning/myshop/myshop/: settings.py  urls.py
django-learning/myshop/nginx/: nginx.conf
django-learning/myshop/products/: admin.py  apps.py  filters.py  models.py  permission_examples.py  permissions.py  serializers.py  signals.py  tests.py  throttles.py  urls.py  validators.py  views.py  viewsets.py
django-learning/myshop/products/migrations/: 0001_initial.py  0002_product_created_by.py  0003_product_sku.py  0004_product_image.py  0005_alter_product_image_productimage.py  0006_alter_product_options_product_product_price_idx_and_more.py  0007_alter_product_description_alter_product_name.py
